trunk/Archive2/d4/dc370f27f456ad/main.cpp
#include <cstddef>

template<class T> struct Loop { Loop<T*> operator->(); };


int main () {
    
    Loop<int> i, j = i->hooray;
    
}
